samples/_failures_safe/1761334888_160ff1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e65b641e.c: In function ‘main’:
./samples/SAFE/__tmp_e65b641e.c:160:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  160 |     size_t decompressed
      |     ^~~~~~
./samples/SAFE/__tmp_e65b641e.c:160:5: error: expected declaration or statement at end of input
